# calculix-csc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: FindExodus.cmake
docker/: Dockerfile-centos7  Dockerfile-ubuntu18
include/: CalculiX.h  KDTreeVectorofVectorsAdaptor.h  clcxCSC.H  clcxInterface.H  dvar.H  stepNonlinGeo.H
src/: CMakeLists.txt  arpack.c  arpackbu.c  arpackcs.c  calcElmVols.c  calcresidual.c  calcresidual_em.c  ccx_2.15.c  checkconvergence.c  checkconvnet.c  checkdivergence.c  checkinclength.c  clcxConfig.cmake  compfluid.c  complexfreq.c  dvar.C  dyna.c  dynacont.c  dynboun.c  electromagnetics.c  exo.c  expand.c  extrapolate.f  filtermain.c  frd.c  linstatic.c  nonlingeo.c  prediction.c  prediction_em.c  projectgradmain.c  radflowload.c  randomfieldmain.c  register_dvar.C  resultsini.f  sensitivity.c  spooles.c  steadystate.c  stepNonlinGeo.C  steps.f  storecontactdof.c  (+4 more)
src/csc/: CMakeLists.txt  clcxCSC.C  clcxDRV.C  clcxInterface.C
testing/: CMakeLists.txt
testing/test_data/beam/: beam.inp  beam.msh
testing/test_data/homogenization/: AL_Calc_0.5.inp  Al_Vol0.5Mesh.inp  h_ref.csv  periodic.equ
testing/test_scripts/: testBeam.C  testHomogenization.C
